@@ -6,9 +6,11 @@ jQuery ->
   $(document)
     .on('click', '[data-object~="modal-show"]', () ->
       $('#sticky_project_id').val($(this).data('project-id'))
+      $('#group_project_id').val($(this).data('project-id'))
       $('#sticky_frame_id').val($("#frame_id").val())
       $('#group_frame_id').val($("#frame_id").val())
       $('#sticky_project_id').change()
+      $('#group_project_id').change()
       $($(this).data('target')).modal({ dynamic: true })
       false
     )
