@@ -1,0 +1,13 @@
+<% if @group %>
+  <% frames = Frame.current.with_project(@group.project_id, current_user.id) %>
+<% else %>
+  <% frames = Frame.current.with_project(nil, current_user.id) %>
+<% end %>
+<%= label_tag :group_frame_id, 'Frame', class: 'control-label' %>
+<div class="controls">
+  <% if @project_id %>
+    <%= select_tag :group_frame_id, options_for_select([['Backlog', nil]] + frames.order('frames.end_date desc').collect{|f| [f.project.name + ": " + f.name + ' - ' + f.short_time, f.id]}, params[:frame_id] ), name: 'frame_id' %>
+  <% else %>
+    <%= hidden_field_tag :group_frame_id, nil, name: 'frame_id' %>
+  <% end %>
+</div>
