@@ -1,6 +1,6 @@
 $('#new-sticky-or-group-dialog').modal('hide');
-$('#template_id').val('');
-$('#template_id').change();
+$('#group_template_id').val('');
+$('#group_template_id').change();
 $('.error').removeClass('error');
 
 <% @group.stickies.each do |sticky| %>
