@@ -2,4 +2,4 @@
   // $('#sticky_<%#= key %>').parent().parent().addClass('error');
 <%# end %>
 
-$('#template_id').parent().parent().addClass('error');
+$('#group_template_id').parent().parent().addClass('error');
