@@ -1,0 +1,4 @@
+$("#item_details").html("");
+$("#group_template_selection_container").html("<%= escape_javascript(render("groups/template_selection")) %>");
+$("#group_frame_selection_container").html("<%= escape_javascript(render("groups/frame_selection")) %>");
+$("#group_frame_id").change();
