@@ -1,9 +1,0 @@
-<% if @template %>
-  <% frames = Frame.current.with_project(@template.project_id, current_user.id) %>
-<% else %>
-  <% frames = Frame.current.with_project(nil, current_user.id) %>
-<% end %>
-<%= label_tag :group_frame_id, 'Frame', class: 'control-label' %>
-<div class="controls">
-  <%= select_tag :group_frame_id, options_for_select([['Backlog', nil]] + frames.order('frames.end_date desc').collect{|f| [f.project.name + ": " + f.name + ' - ' + f.short_time, f.id]} ), name: 'frame_id' %>
-</div>
