@@ -1,2 +1,1 @@
-$("#template_frame_selection_container").html("<%= escape_javascript(render("templates/frame_selection")) %>");
 $("#item_details").html("<%= escape_javascript(render("templates/compact_items")) if @template %>")
